[gd_scene load_steps=3 format=3 uid="uid://df1ahxmgj37y2"]

[ext_resource type="Script" path="res://scripts/TelaInicial.gd" id="1_jhv75"]
[ext_resource type="Resource" uid="uid://cmgr2p7euw6s2" path="res://resources/varied/theme/Tema_Variado.tres" id="2_fa0kv"]

[node name="Main" type="CanvasLayer"]
script = ExtResource("1_jhv75")
quiz = ExtResource("2_fa0kv")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = 18.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="Control/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
color = Color(0.027451, 0.141176, 0.211765, 1)

[node name="Label" type="Label" parent="Control/VBoxContainer/ColorRect"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -244.0
offset_top = 110.0
offset_right = 241.0
offset_bottom = 329.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 40
text = "               Bem vindo 
                      ao 
        Programação Lúdica"

[node name="Panel" type="Panel" parent="Control/VBoxContainer/ColorRect"]
custom_minimum_size = Vector2(400, 400)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -200.0
offset_right = 200.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="Control/VBoxContainer/ColorRect/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 2.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 5

[node name="VBoxContainer" type="VBoxContainer" parent="Control/VBoxContainer/ColorRect"]
custom_minimum_size = Vector2(118, 43)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.969
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -78.0
offset_top = -284.32
offset_right = 80.0
offset_bottom = -250.0
grow_horizontal = 2
grow_vertical = 0

[node name="ColorRect" type="ColorRect" parent="Control/VBoxContainer/ColorRect/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
color = Color(0.109804, 0.313726, 0.321569, 1)

[node name="Button" type="Button" parent="Control/VBoxContainer/ColorRect/VBoxContainer/ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 27
text = "INICIAR"
flat = true

[node name="ColorRect" type="ColorRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.027451, 0.141176, 0.211765, 1)

[node name="ColorRect" type="ColorRect" parent="Control/ColorRect"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
color = Color(0.109804, 0.313726, 0.321569, 1)
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="Control/ColorRect/ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -147.0
offset_top = -21.0
offset_right = 147.0
offset_bottom = 21.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 46
text = "Programção Ludica"

[node name="LineEdit" type="LineEdit" parent="Control/ColorRect"]
custom_minimum_size = Vector2(200, 80)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -186.0
offset_top = -544.0
offset_right = 204.0
offset_bottom = -464.0
grow_horizontal = 2
grow_vertical = 0
placeholder_text = "escreva seu nome"
alignment = 1

[node name="Label" type="Label" parent="Control/ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -156.0
offset_top = 27.0
offset_right = 165.0
offset_bottom = 66.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 28
text = "É Você qual o seu Nome"

[node name="ColorRect2" type="ColorRect" parent="Control/ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -413.0
offset_right = 200.0
offset_bottom = -197.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.109804, 0.313726, 0.321569, 1)

[node name="Label" type="Label" parent="Control/ColorRect/ColorRect2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 17
text = "       
        Somos um Jogo Eduvatico Projetado para 
        Introdusir os alunos do curso tecnico em
         informatica ao mundo da Programação 
        de maneira divertida e interativa"

[node name="ColorRect3" type="ColorRect" parent="Control/ColorRect"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.489
anchor_top = 0.711
anchor_right = 0.489
anchor_bottom = 0.711
offset_left = -82.08
offset_top = -19.8781
offset_right = 81.92
offset_bottom = 20.1219
grow_horizontal = 2
grow_vertical = 2
color = Color(0.109804, 0.313726, 0.321569, 1)

[node name="Button" type="Button" parent="Control/ColorRect/ColorRect3"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Ola"

[node name="Tela_Informacao" type="ColorRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.027451, 0.141176, 0.211765, 1)

[node name="Label" type="Label" parent="Control/Tela_Informacao"]
layout_mode = 0
offset_left = 80.0
offset_top = 286.0
offset_right = 635.0
offset_bottom = 447.0
theme_override_font_sizes/font_size = 27
text = "MEO OVO E GRANDE "
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="ColorRect" type="ColorRect" parent="Control/Tela_Informacao"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 144.0
grow_horizontal = 2
color = Color(0.109804, 0.313726, 0.321569, 1)

[node name="Label" type="Label" parent="Control/Tela_Informacao/ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "Programação Ludica"

[node name="ColorRect2" type="ColorRect" parent="Control/Tela_Informacao"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 80.0
offset_top = -150.0
offset_right = -72.0
offset_bottom = 202.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.109804, 0.313726, 0.321569, 1)

[node name="Label" type="Label" parent="Control/Tela_Informacao/ColorRect2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -6.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 16
text = "
O jogo tem 3 níveis, cada um com 3 perguntas sobre programação 
em Python:

Nível 1: Perguntas fáceis
Nível 2: Perguntas médias
Nível 3: Perguntas difíceis

Quanto mais rápido você responder, mais pontos ganhará.

Observação: Ao clicar em iniciar, você terá que concluir o jogo.
Vamos jogar?"
horizontal_alignment = 1

[node name="ColorRect3" type="ColorRect" parent="Control/Tela_Informacao"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -88.0
offset_top = -374.0
offset_right = 88.0
offset_bottom = -306.0
grow_horizontal = 2
grow_vertical = 0
color = Color(0.0117647, 0.678431, 0, 1)

[node name="Button" type="Button" parent="Control/Tela_Informacao/ColorRect3"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -4.0
offset_top = -31.0
offset_right = -4.0
offset_bottom = 29.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 21
text = "INICIAR"
flat = true

[node name="Jogo" type="ColorRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.027451, 0.141176, 0.211765, 1)

[node name="ColorRect" type="ColorRect" parent="Control/Jogo"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 130.0
grow_horizontal = 2
color = Color(0.109804, 0.313726, 0.321569, 1)

[node name="Label" type="Label" parent="Control/Jogo/ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 27
text = "       Nivel: 1
       Pontuação: 0"
vertical_alignment = 1

[node name="Label" type="Label" parent="Control/Jogo"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -309.0
offset_bottom = -252.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 25
text = "Problema: Este código imprime os números de 1 a 10?"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="Control/Jogo"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -173.0
offset_bottom = -123.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 36
text = "               Código:"
horizontal_alignment = 3
justification_flags = 35

[node name="ColorRect2" type="ColorRect" parent="Control/Jogo"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -216.0
offset_top = -110.0
offset_right = 196.0
offset_bottom = 196.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.109804, 0.313726, 0.321569, 1)

[node name="Label" type="Label" parent="Control/Jogo/ColorRect2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 25
text = "for i in range(1, 11):
     print(i)"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label3" type="Label" parent="Control/Jogo"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -216.0
offset_top = -416.0
offset_right = -15.0
offset_bottom = -386.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 21
text = "Esta afirmação está:"

[node name="VBoxContainer" type="VBoxContainer" parent="Control/Jogo"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -344.0
offset_right = 200.0
offset_bottom = -242.0
grow_horizontal = 2
grow_vertical = 0

[node name="Button" type="Button" parent="Control/Jogo/VBoxContainer"]
layout_mode = 2
text = "Certo"

[node name="Button2" type="Button" parent="Control/Jogo/VBoxContainer"]
layout_mode = 2
text = "Errado"

[connection signal="pressed" from="Control/VBoxContainer/ColorRect/VBoxContainer/ColorRect/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Control/ColorRect/ColorRect3/Button" to="." method="_on_button_nome_pressed"]
[connection signal="pressed" from="Control/Tela_Informacao/ColorRect3/Button" to="." method="_on_button_iniciar_jogo_pressed"]
